# Minishell

./: CMakeLists.txt  Makefile  README.md  Readme.md  Readme.txt  grammar.md  libft.c  mini.h  miniparse.c  minitok.c
includes/: mini.h  minishell.h  parsing.h
srcs/: env.c  libft.c  main.c  miniparse.c  minitok.c
srcs/builtins/: cd.c  echo.c  exit.c  export.c  false.c  kill.c  pwd.c  read.c  sh_env.c  true.c  unset.c
srcs/containers/: containers.h  generate.sh  wanted
srcs/containers/bool_vec/: bool_vec.c  bool_vec.h
srcs/containers/char_vec/: char_vec.c  char_vec.h  char_vec2.c
srcs/containers/str_vec/: str_vec.c  str_vec.h  str_vec2.c
srcs/containers/vector/: vector.c  vector.h
srcs/env/: dupenv.c  env.c  env_utils.c  init_env.c  merge_env.c  parse_env.c  serialize_env.c
srcs/execution/: command_name.c  exec.c  exec_builtin.c  exec_pipeline.c  exec_program.c  ft_exit.c  redirections.c  signals.c  utils.c
srcs/gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
srcs/libft/: Makefile  ft_atoi.c  ft_calloc.c  ft_countoccur.c  ft_isalnum.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strnstr.c  ft_strreplace.c  ft_strtrim.c  ft_substr.c  ft_toupper.c  libft.h  nb_is_inferior.c
srcs/parser/: classic_utils.c  destroy_tree.c  expansion.c  expansion_utils.c  libft.c  parse_grouping.c  parse_list.c  parse_pipe.c  parse_redir.c  parse_simple.c  parsing.c  print.c  tokeniser.c  tokeniserprev.c  utils_list.c  utils_lst.c  utils_parser.c
srcs/utils/: input.c  my_get_working_directory.c  my_getopt.c  my_perror.c  path_find.c  path_match.c  path_utils.c  split_ifs.c  tmp_file.c
